<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">逗逗大作战</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="gamButton">开始游戏</string>
    <string name="changgeDifficult">游戏难度</string>
    <string name="changgeSpeed">移动速度</string>
    <string name="changgeGrow">发育速度</string>
    <string name="rank">排行榜</string>
    <string name="UserName">逗逗大作战</string>
    <string name="moreApp">更多游戏</string>
    <string name="exit">退出</string>
    <string name="zhengdong">播放震动效果</string>
    <string name="bgmusic">开启背景音乐</string>
    <string name="tip">显示提示信息</string>
    
    <string name="score">Your Best Score:0</string>
    <string name="ok">确定</string>
    <string name="hand_score">提交成绩</string>
    <string name="bt_tip">提示</string>

</resources>
